修改了course类中CourseId为courseId 出现了同样的语句，删了文件重写就不报错的情况

--- a/src/test/upfileTest.html
+++ b/src/test/upfileTest.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>测试多文件上传</h1>
-<form action="/acss/upload" enctype="multipart/form-data" method="post" >
+<form action="localhost:8080/acss/upload" enctype="multipart/form-data" method="post" >
     <p>
         大一大二开课表格：<input type="file" name="file">
     </p>
